src/objects/Service_Date__c.object
<CustomObject>
    <description>Service Dates for Work Orders</description>
    <fields>
        <fullName>Acknowledge_competitor_swap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledge competitor swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <formula>Related_Work_Order__r.CMH_ID__c</formula>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_WO_Time__c</fullName>
        <description>Calculates Central Time for the work order starting end time.</description>
        <formula>/*Dates are good till the year 2020 */
IF( 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2003,4,6)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2003,10,26))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2004,4,4)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2004,10,31))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2005,4,3)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2005,10,30))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2006,4,2)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2006,10,29))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2007,3,11)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2007,11,4))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2008,3,9)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2008,11,2))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2009,3,8)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2009,11,1))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2010,3,14)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2010,11,7))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2011,3,13)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2011,11,6))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2012,3,11)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2012,11,4))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2013,3,10)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2013,11,3))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2014,3,9)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2014,11,2))) || 
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2015,3,8)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2015,11,1))) ||
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2016,3,13)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2016,11,6))) ||
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2017,3,12)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2017,11,5))) ||
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2018,3,11)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2018,11,4))) ||
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2019,3,10)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2019,11,3))) ||
(( DATEVALUE(ServiceDateEnd__c)&gt;= DATE(2020,3,8)) &amp;&amp; (DATEVALUE(ServiceDateEnd__c)&lt;= DATE(2020,11,1)))  
,(ServiceDateEnd__c - (OFFSET_DST_c__c/24)- 5/24),(ServiceDateEnd__c  - (OFFSET_ST__c /24) - 6/24))
/* the above line calculates the offset for Central Time only */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A formula field that translates the time of the work order from the local clinic time to central time.</inlineHelpText>
        <label>CM WO Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Phone__c</fullName>
        <formula>Related_Work_Order__r.Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>(Related_Work_Order__r.Owner:User.FirstName + &quot; &quot; + Related_Work_Order__r.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckInTime__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutTime__c</fullName>
        <label>Check Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckedInYES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked In, YES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckedOutYES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked Out, YES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Switch__c</fullName>
        <formula>Related_Work_Order__r.CompetitorSwap__c</formula>
        <label>Competitor Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <label>Completed By</label>
        <picklist>
            <picklistValues>
                <fullName>Castillo, Alex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohn, Daniel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coyne, George</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn, Nick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escobar, Gilberto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster, Marcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halpin, Joe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Han, John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heer, Kamal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kemp, Travis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiefer, Joe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Okocha, Ifeanyi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richardson, Caleb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vega, Salvador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Partner__c</fullName>
        <formula>Related_Work_Order__r.Field_Partner_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallDateConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Date Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue(s)</label>
        <picklist>
            <picklistValues>
                <fullName>No Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets&gt;Not associated in MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets&gt;Not associated in SF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Approval&gt;Data Drop Not Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Approval&gt;WiFi Captive Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Approval&gt;No Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Approval&gt;OTHER&gt;SEE CASE NOTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;Extra Equip Sent&gt;See Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;Improper 24hr Check&gt;See Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;Incomplete Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;Scheduling&gt;Job Ran Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;Wrong Equip Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership&gt;OTHER&gt;SEE CASE NOTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site&gt;Clinic Busy&gt;Turned Tech Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site&gt;OTHER&gt;SEE CASE NOTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site&gt;Power Outages/Unstable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site&gt;Range Extender (Almond) Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site&gt;Weather Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech&gt;Abandoned Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech&gt;Compliance Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech&gt;Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech&gt;No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Almond&gt;No_Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Player&gt;Connectivity/Lan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Player&gt;Connectivity/MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Player&gt;Connectivity/WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Player&gt;Hard Drive Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Tablet&gt;Bad Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Tablet&gt;Connectivity/WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product&gt;Tablet&gt;Not Charging/Dead</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Isthisareturntrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a return trip?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logistical_Shipping_Error__c</fullName>
        <label>Logistical Shipping Error?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Practice_City_State__c</fullName>
        <formula>Related_Work_Order__r.Account.BillingCity &amp; &quot;,&quot; &amp; Related_Work_Order__r.Account.BillingState</formula>
        <label>Member Practice City &amp; State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Sprint_devices__c</fullName>
        <label>Member Practice - # Sprint devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Stage__c</fullName>
        <formula>Text( Related_Work_Order__r.Account.Stage__c )</formula>
        <label>Member Practice Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeofWorkOrders__c</fullName>
        <label>Member practice - # of Work Orders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissingEquipment__c</fullName>
        <label>Missing Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NextActionOwner__c</fullName>
        <formula>Related_Work_Order__r.Next_Action_Owner__r.FirstName + &apos; &apos;+ Related_Work_Order__r.Next_Action_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Action Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OFFSET_DST_c__c</fullName>
        <formula>Related_Work_Order__r.OFFSET_DST_c__c</formula>
        <label>OFFSET_DST__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFSET_ST__c</fullName>
        <formula>Related_Work_Order__r.OFFSET_ST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OFFSET ST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ontime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ontime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pictures_Received__c</fullName>
        <formula>Related_Work_Order__r.PicturesReceived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pictures Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_second_reschedule__c</fullName>
        <label>Reasons for reschedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasonforreturntrip__c</fullName>
        <label>Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Success - Work Order Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Power Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping - Broken Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping - Broken TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping - Assets not associated in Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping - iD did not ship a part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Issue with player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Issue with TV / other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Issue with Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling  - Tech Caused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling - Job ran long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Caused - Add to Google Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Caused - Clinic busy, turned tech away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper 24 Hour Check - Clinic not available (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper 24 Hour Check - IT not available  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper 24 Hour Check - Equipment not available (hasn&apos;t arrived)  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper 24 Hour Check - Competitor equipment still on site  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper OBD Questions - Wrong equipment sent  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper IT Approval - Wifi has captive portal  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper IT Approval - Wifi is not available  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper IT Approval - Data drop not possible  (on creator + NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Issue - Compliance Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Issue - Tech Abandoned Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Issue - Tech No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasonplayerwasdown__c</fullName>
        <label>Reason player was down</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Member_Practice__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Related_Work_Order__r.AccountId, Related_Work_Order__r.Account.Name, &quot;_self&quot;)</formula>
        <label>Related Member Practice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <label>Related Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Dates</relationshipLabel>
        <relationshipName>Service_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestedRescheduleDate__c</fullName>
        <label>Requested Reschedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReviewCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledtoInstalledLength__c</fullName>
        <label>Scheduled to Installed Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceDateEndOffset__c</fullName>
        <description>this formula calculates 30 min prior the Central Time</description>
        <formula>(CM_WO_Time__c - ((1/24.0)/2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Date End Offset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceDateEnd__c</fullName>
        <label>Service Date - End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceDateLink__c</fullName>
        <label>Service Date Link</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceDateStart__c</fullName>
        <label>Service Date - Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipping_Error_Explanation__c</fullName>
        <label>Shipping Error Explanation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusIcon__c</fullName>
        <formula>IF(
AND(NOT(ISPICKVAL(Status__c, &quot;Canceled&quot;)),
    NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)),
    NOT(ISNULL(ServiceDateEnd__c)),
    NOT(CheckedInYES__c),
    NOW() &gt; ServiceDateEnd__c + 0.02073),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000002Pedy&quot;, &quot;Red Flag&quot;, 30, 30),
IF(
AND(NOT(ISPICKVAL(Status__c, &quot;Canceled&quot;)),
    NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)),
    NOT(ISNULL(ServiceDateEnd__c)),
    CheckedInYES__c,
    NOT(CheckedOutYES__c),
    NOW() &gt; LastModifiedDate + 0.04146),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000001pvEJ&quot;, &quot;Blue Flag&quot;, 30, 30),
IF(
AND(NOT(ISPICKVAL(Status__c, &quot;Canceled&quot;)),
    NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)),
    NOT(ISNULL(ServiceDateEnd__c)),
    CheckedInYES__c,
    NOT(CheckedOutYES__c),
    NOW() &lt; LastModifiedDate + 0.04146),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000001pvEL&quot;, &quot;Green Flag&quot;, 30, 30),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Clinic Completed Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Reconsidered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Damaged/Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Not Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Issue (iD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Issue (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Ran Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Tech Related Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Unable to Source Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTI Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTI Tech Related Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTI Unable to Source Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Technician Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Hardware Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Tech Related Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Unable to Source Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techlink Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techlink Tech Related Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TechLink Unable to Source Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Updated by TechLink through the API.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled - Do Not Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release To Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechLate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechLate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechLink_Work_Order_ID__c</fullName>
        <description>Updated by TechLink through the API.</description>
        <label>TechLink Work Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechNoShow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechReview__c</fullName>
        <label>Tech Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Update__c</fullName>
        <formula>Related_Work_Order__r.Tech_Update__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicianNameFromLegacy__c</fullName>
        <label>Technician Name (from Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicianPhoneFromLegacy__c</fullName>
        <label>Technician Phone (from Legacy)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicianTechnicalAcumen__c</fullName>
        <label>Technician - Technical Acumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician_City_and_State__c</fullName>
        <formula>Technician_Name__r.MailingCity &amp; &quot;,&quot; &amp;  Technician_Name__r.MailingState</formula>
        <label>Technician City and State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Email_Address__c</fullName>
        <formula>Technician_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>ContextMedia Contractors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Dates</relationshipLabel>
        <relationshipName>Service_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician_Phone__c</fullName>
        <formula>Technician_Name__r.Phone</formula>
        <label>Technician Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Role__c</fullName>
        <formula>Text(Technician_Name__r.Role__c)</formula>
        <label>Technician Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Late__c</fullName>
        <formula>(CheckInTime__c - CM_WO_Time__c) *1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Late (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>Related_Work_Order__r.Time_Zon__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Work_Order_Time__c</fullName>
        <formula>(CheckOutTime__c - CheckInTime__c) *1440</formula>
        <label>Total Work Order Time (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Video_Received__c</fullName>
        <formula>Related_Work_Order__r.Video_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Video Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOTimeWindow__c</fullName>
        <label>WO Time Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderAssignee__c</fullName>
        <label>Work Order - Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Closed__c</fullName>
        <formula>Related_Work_Order__r.IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Date_of_Initial_Operaion__c</fullName>
        <label>Work Order - Date of Initial Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Id__c</fullName>
        <formula>Related_Work_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_MSE__c</fullName>
        <label>Work Order - MSE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Member_Practice_City__c</fullName>
        <label>Work Order Member Practice City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Member_practice_Sprint__c</fullName>
        <label>Work Order - Member practice - # Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>